att-toolkit-salesforce/src/objects/DemoSinglepayHistory__c.object
<CustomObject>
    <fields>
        <fullName>AuthCode__c</fullName>
        <label>AuthCode</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MerchantTransactionID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>MerchantTransactionID</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refunded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refunded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TransactionDate__c</fullName>
        <label>TransactionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TransactionID__c</fullName>
        <label>TransactionID</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DemoSinglepayHistory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Price__c</columns>
        <columns>Product__c</columns>
        <columns>MerchantTransactionID__c</columns>
        <columns>TransactionDate__c</columns>
        <columns>AuthCode__c</columns>
        <columns>TransactionID__c</columns>
        <columns>Refunded__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DemoSinglepayPayments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DemoSinglepayHistory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>